# beskar

./: .gitignore  CMakeLists.txt  README.md  TODO.txt
include/beskar_editor/: editor.h  gui.h  main.h  resource_management.h  sprite_editor.h  texture_inspector.h
include/beskar_engine/: application.h  gl_mesh.h  gl_renderer.h  gl_shader.h  gl_texture.h  guid.h  mesh.h  mesh_asset.h  renderer_system.h  resource_manager.h  resource_system.h  shader.h  sprite_asset.h  texture.h
src/editor/: CMakeLists.txt  main.cpp
src/engine/: CMakeLists.txt  application.cpp  mesh.cpp  renderer_system.cpp  resource_system.cpp  shader.cpp  texture.cpp
src/engine/asset/: mesh_asset.cpp  sprite_asset.cpp
src/engine/graphic/: gl_mesh.cpp  gl_renderer.cpp  gl_shader.cpp  gl_texture.cpp
